--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ psycopg2-binary==2.9.3
 pycares==4.1.2
 pycparser==2.21
 pydantic==1.9.0
+python-dotenv==0.19.2
 requests==2.27.1
 sniffio==1.2.0
 soupsieve==2.3.1
