--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiodns==3.0.0
 aiohttp==3.8.1
 aiosignal==1.2.0
+alembic==1.7.7
 anyio==3.5.0
 asgiref==3.4.1
 async-timeout==4.0.2
@@ -19,22 +20,33 @@ greenlet==1.1.2
 gunicorn==20.1.0
 h11==0.12.0
 idna==3.3
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+iniconfig==1.1.1
 Jinja2==3.0.3
 lxml==4.7.1
+Mako==1.2.0
 MarkupSafe==2.0.1
 migrate==0.3.8
 multidict==6.0.2
+packaging==21.3
+pluggy==1.0.0
 psycopg2-binary==2.9.3
+py==1.11.0
 pycares==4.1.2
 pycparser==2.21
 pydantic==1.9.0
+pyparsing==3.0.7
+pytest==7.1.0
 python-dotenv==0.19.2
 requests==2.27.1
 sniffio==1.2.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.29
 starlette==0.17.1
+tomli==2.0.1
 typing-extensions==4.0.1
 urllib3==1.26.8
 uvicorn==0.16.0
 yarl==1.7.2
+zipp==3.8.0
